z-index on socials fix on mobile

--- a/style.css
+++ b/style.css
@@ -104,6 +104,7 @@ a.linkedin {
   position: absolute;
   top: 16px;
   transition: transform .2s ease-in-out;
+  z-index: 1;
 }
 
 a.twitter:hover,
